<resources>
    <string name="app_name">Взаимоисключающие CheckBox</string>
    <string name="by_card">Банковской картой</string>
    <string name="by_mobile_phone">С мобильного телефона</string>
    <string name="by_cash">Наличными по адресу</string>
    <string name="choose_payment_method">Выберите способ оплаты:</string>
    <string name="ok">ОК</string>
    <string name="credit_card_info">Введите номер карты</string>
    <string name="input_money">Введите сумму</string>
    <string name="toast_message">
        Метод оплаты: %1$s;\n
        %2$s: %3$s;\n
        Введенная сумма: %4$s.
    </string>
    <string-array name="input_info_hint">
        <item>Введите номер карты</item>
        <item>Введите номер телефона</item>
        <item>Ввевите адрес</item>
    </string-array>
    <string-array name="payment_method_message">
        <item>Номер карты</item>
        <item>Номер телефона</item>
        <item>Адрес</item>
    </string-array>
</resources>